--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "env2": "^2.2.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mariadb": "^3.0.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.38",
     "nodemon": "^2.0.16",
+    "sequelize-cli": "^6.4.1",
     "typescript": "^4.7.2"
   }
 }
