--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "books-directory",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index",
+  "typings": "server/index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./server/index.ts"
@@ -22,15 +23,22 @@
     "dotenv": "^16.0.1",
     "env2": "^2.2.2",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mariadb": "^3.0.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.20.1"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.20.1",
+    "sequelize-cli-typescript": "^3.2.0-c",
+    "sequelize-typescript": "^2.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.38",
+    "@types/validator": "^13.7.2",
     "nodemon": "^2.0.16",
     "sequelize-cli": "^6.4.1",
-    "typescript": "^4.7.2"
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2",
+    "@types/joi": "^17.2.3"
   }
 }
